[Day 0] 코딩 테스트 사전 준비
코딩 테스트 합격자 되기 (자바 편)
00. 코딩 테스트를 준비하기 전에
01. 코딩 테스트 효율적으로 준비하기
02. 프로그래머스 완벽 활용 가이드
03. 알고리즘 효율 분석

--- a/1. 코딩 테스트 사전 준비.md
+++ b/1. 코딩 테스트 사전 준비.md
@@ -47,4 +47,30 @@
 	- 최선(빅 오메가), 보통(빅 세타), 최악(빅 오)로 나타냄
 - 최악의 경우 시간 복잡도를 표현하는 빅오 표기법
 	- 함수의 최고차항을 남기고 계수를 지워 O(...)와 같이 표기
-- 
+   	- 다음을 만족하는 C가 있으면 f(x)의 최악의 시간 복잡도는 O(g(x))
+   	   - 특정 x 시점 이후부터 항상 f(x)<=C*g(x)를 만족
+   	   - C는 상수
+   	❓빅오 표기법을 쉽게 쓸 때는 왜 최고차항만 남기고 계수를 지울까?
+   	   - 무한히 커지는 상황을 가정했을 때 차이가 커져서
+   	- 시간 복잡도를 코딩 테스트에 활용하는 방법
+  	   - 연산 횟수는 1000~3000만 정도로
+	      </br></br>
+       
+	   	| 시간 복잡도 | N의 가용 범위 |
+		| ----------- | ------------- |
+		| O(N!)       | 10            |
+		| O(2^N)      | 20~25         |
+		| O(N^3)      | 200~300       |
+		| O(N^2)      | 3,000~5,000   |
+		| O(NlogN)    | 100만         |
+		| O(N)        | 1,000~2,000만 |
+		| O(logN)     | 10억          |
+
+## 03-2. 시간 복잡도 계산해보기
+1. 별 찍기 문제 : N을 입력 받으면 N번째 줄까지 별을 1개부터 N개까지 늘려가며 출력
+   출력 자체가 연산, f(x) = 1+2+...+n = n(n+1)/2
+   O(n^2)
+2. 박테리아 수명 문제 : 초기 박테리아 세포 개수가 N일때 세포 개수가 이전 세포 개수의 반으로 준다면 언제 모든 박테리아가 죽을지 계산
+   2^f(x) = N, f(x) = log2N
+   O(logN) 
+
