[Day 1] 04. 코딩 테스트 필수 문법
1. 프리미티브 타입과 레퍼런스 타입
2. 컬렉션 프레임워크
3. 메서드
4. 코딩 테스트 코드 구현 노하우

--- a/2. 코딩 테스트 필수 문법.md
+++ b/2. 코딩 테스트 필수 문법.md
@@ -101,7 +101,9 @@ map.remove("apple"); // 삭제
 ### 문자열
 이뮤터블 객체 : 값을 변경할 수 없는 객체, 시간 복잡도 관점에서 사용 시 주의
 - 문자열 추가, 삭제시 기존 객체를 수정하는 것이 아닌, 새로운 객체를 반환
-[사진]
+
+![image](https://github.com/user-attachments/assets/de754206-6866-4fe6-83a8-44c16a64b4ca)
+
 1. 새로운 String string 객체 생성
 2. string의 "He" 값을 하나씩 복사
 3. "He" 뒤에 "llo" 저장
@@ -122,4 +124,14 @@ sb.insert(1,2) // 1번 인덱스에 2라는 문자 추가
 
 ## 04-3. 메서드
 - 람다식 : 익명 함수, 코드에서 한 번 실행할 목적으로 사용하거나 함수 자체를 다른 함수의 인수로 전달할 때 사용
-- 
+```
+ Arrays.sort(nodes, (o1, o2) -> Integer.compare(o1.cost, o2.cost)); // 비교기 사용
+```
+compare로 대소관계를 판단하고 sort로 정렬
+
+## 04-4. 코딩 테스트 코드 구현 노하우
+- 조기 반환 : 예외 처리를 하지 않기 위해 if 문으로 조기 반환해줌
+- 보호 구문 : 본격적인 로직 진행 전 예외 처리 코드를 추가하는 기법
+- 제네릭 : 빌드 레벨에서 타입을 체크하여 타입 안정성을 제ㅔ공하고, 타입 체크와 형변환을 생략할 수 있게 해주는 기능
+List<**Integer**> genericList = new ArrayList<>();
+빌드 시점에 오류를 발생시켜 런타임 오류를 방지
